# Ogre-build

./: .gitignore  README.md  Start.bat
Game/: CMakeLists.txt
Game/src/: EmptyProject.cpp
StartUp/: Build.bat  InstallOgre.bat  OgreSetup.bat  VcpkgSetup.bat
